# trustblock-cli

./: .dockerignore  .env-example  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile.toml  README.md  codecov.yml  docker-compose.yml  install.sh  webapp.sh
.github/workflows/: pull-requests.yml  push.yml
src/: constants.rs  error_handler.rs  lib.rs  main.rs  utils.rs
src/cmd/: clean.rs  init.rs  mod.rs  publish_audit.rs  trustblock.rs  utils.rs
src/cmd/publish_audit/: mod.rs  publish_db.rs  publish_sc.rs
src/data/: Forwarder.json  TrustblockCore.json  audit.json
src/types/: chains.rs  forward_request.rs  mod.rs  project.rs  trustblock_contracts.rs
tests/: init.rs  publish_audit.rs
tests/common/: constants.rs  mock_data.rs  mod.rs  utils.rs
tests/test-data/: audit.json  auditor.json  tb_core_abi.json
tests/test-data/fixtures/: args_report_and_url_together_error.stdout  clean.stdout  clean_no_folder.stdout  env_file_no_values.stdout  env_file_with_values.stdout  init.stdout  init_already_exists.stdout  publish_db.stdout  publish_db_project_exists.stdout  publish_db_report_exists.stdout  publish_db_report_exists_project_exists.stdout
tests/test-data/pdf_reports/: .tmp185eeW  .tmpAWggeF  .tmpK8RyyS  .tmpXfTYgD  .tmpbBYoB8  .tmpolcxDY  .tmpuxG1SM
